replaced inline block whitespace fix rules with a single mixin

--- a/assets/styles/_form.scss
+++ b/assets/styles/_form.scss
@@ -13,12 +13,7 @@
 
 form {
     @include paragraph;
-    
-    letter-spacing: -1em;
-
-    > * {
-        letter-spacing: normal;
-    }
+    @include inline-block-whitespace-fix;
 }
 
 *:disabled {
